# podcast-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sample.http
podcast_generator/: __init__.py  __main__.py  audio_join.py  chatterbox.py  config.py  llm.py  main.py  parse_script.py  speakers.py
