[project]
name = "podcast-generator"
version = "0.1.0"
description = "Generate multi-speaker podcasts from content via LLM + Chatterbox TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]
tts = [
    "chatterbox-tts>=0.1.4",
    "setuptools<71.0.0", # Required for resemble-perth which uses pkg_resources
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["podcast_generator*"]
